--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draggable box</title>
+    <link rel="stylesheet" href="/mini_project06/css/style.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div id="draggable-elem">
+            <p>Drag</p>
+        </div>
+    </div>
+    <script src="/mini_project06/js/script.js"></script>
 </body>
 </html>
